solved overflow problem and display problem on extra small screen

--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body{
     background-repeat: no-repeat;
     background-size: auto;
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}
+
+div{
+    overflow-x: hidden;
 }
 
 .nav-custom{
